fix padding & align times

--- a/Front/src/pages/ProfilePlayer/profilePlayer.css
+++ b/Front/src/pages/ProfilePlayer/profilePlayer.css
@@ -11,7 +11,7 @@
 
 .container--profilePlayer {
 	width: 600px;
-	padding: 0px 40px;
+	padding: 0px 20px;
 	font-family: var(--ff--lato);
 	background-color: rgba(255, 255, 255, 0.637);
 	display: flex;
@@ -104,7 +104,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
-	align-items: center;
+	align-items: flex-start;
 }
 
 .container--profilePlayer--info--contact {
